--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <nav class="nav breadcrumbs">
                 <div class="logo">
-                    <img src="Logo.png" alt="Logo" height="64px" class="logo" href="#">
+                    <img src="image/Logo.png" alt="Logo" height="64px" class="logo" href="#">
                 </div>
                 <ul class="navbar list-menu">
                     <li class="navbar-item menu" href="/trangchu">Trang chủ</li>
@@ -26,14 +26,14 @@
                     <li class="navbar-item menu" href="/lienhe">Liên hệ</li>
                 </ul>
                 <div class="item-menu ">
-                    <img src="icon-menu.png" alt="" height="36px" style="margin-top: 22px">
+                    <img src="image/icon-menu.png" alt="" height="36px" style="margin-top: 22px">
                 </div>
             </nav>
         </div>
     </div>
 
     <div class="lienhe">
-        <img src="Facebook-logo.png" alt="" height="64px">
+        <img src="image/Facebook-logo.png" alt="" height="64px">
     </div>
 
     <div class="header row">
@@ -76,7 +76,7 @@
     <div class="footer mt-5">
         <div class="text-center row">
             <h1 class="col-8 align-center">Đây là phần liên hệ</h1>
-            <a class="col-2" href="https://www.facebook.com/your.sonpham96"><img src="Facebook-logo.png" height="64px">Sơn Hải</a>
+            <a class="col-2" href="https://www.facebook.com/your.sonpham96"><img src="image/Facebook-logo.png" height="64px">Sơn Hải</a>
         </div>
     </div>
 
