--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="4000">
-                    <img src="team-img.jpg" class="d-block w-100" alt="...">
+                    <img src="image/team-img.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="team-img.jpg" class="d-block w-100" alt="...">
+                    <img src="image/team-img.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item" data-bs-interval="4000">
-                    <img src="team-img.jpg" class="d-block w-100" alt="...">
+                    <img src="image/team-img.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
